--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ body {
     margin-right: 10px;
     width: 20px;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
