--- a/styles.css
+++ b/styles.css
@@ -243,11 +243,11 @@ body {
 .additional-info__education-university-speciality {
     color: var(--primary-text-color);
     text-align: left;
-    margin-bottom: 10px;
 }
 
 .additional-info__education-university-name {
     color: var(--secondary-text-color);
+    margin-bottom: 10px;
 }
 
 .additional-info__languages {
@@ -262,4 +262,8 @@ body {
 
 .additional-info__languages-item {
     color: var(--secondary-text-color);
+}
+.none {
+    color: var(--secondary-text-color);
+    text-decoration: none;
 }
